--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,25 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <div class="containerOne">
+            <div class="purpleBox"></div>
+            <div class="greenBox"></div>
+            <div class ="circleOne"></div>
+    </div>
+    <h1 class = "hello"></h1>
+</body>
+<body>
+    <div class = "containerTwo">
+        <div class = "outsideBox"></div>
+    </div>
+</body>
+    <div class = "containerThree"></div>
+
+</html>
