--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,25 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="index.css" />
+</head>
+<body>
+    <div = "row row1"></div>
+        <div = "blueSquare"></div>
+    </div>
+    <div = "row-outside row2">
+             <p = "paragraph">
+             Consider hiding the status bar --  and all other app UI -- while people are actively viewing full-screen media. If you hide the status bar, be sure to let people retrieve it ( and the appropriate app UI ) with a single tap. Unless you have a compelling reason to do so, avoid defining a custom gesture to redisplay the status bar because users are unlikely to discover such a gesture or to remember it.
+             </p>
+    </div>
+    <div = "blue"></div>
+    <div = "turquoise"></div>
+    <div = "lightGreen"></div>
+    <div = "yellow"></div>
+
+</body>
+</html>
